--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -1,4 +1,23 @@
 ru:
+  precondition: "Создайте или войдите в учетную запись"
+  hi: "Привет"
+  user:
+    sign_up: "Регистрация"
+    sign_out: "Выход"
+    login: "Вход"
+    first_name: "Имя"
+    last_name: "Фамилия"
+    email: "Электронная почта"
+    password: "Пароль"
+    confirm_password: "Подтвердите пароль"
+    register: "Зарегистрироваться"
+    remember: "Запомнить меня"
+  nav:
+    company: "Компания"
+    me: "Я"
+    events: "События"
+    categories: "Категории"
+    language: "Язык"
   errors:
     messages:
       expired: "устарела. Пожалуйста, запросите новую"
