Add tests to home modules

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -2,7 +2,7 @@
 
 en:
   precondition: "Create or sign in an account"
-  hi: "Hello"
+  greeting: "Hello"
   user:
     sign_up: "Registration"
     sign_out: "Sing out"
