--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -9,6 +9,42 @@ ru:
       not_saved:
         one: "%{resource}: сохранение не удалось из-за %{count} ошибки"
         other: "%{resource}: сохранение не удалось из-за %{count} ошибки"
+  user:
+    edit_acc: "Изменение личных данных"
+    sign_out: "Выход"
+    sign_up: "Регистрация"
+    sign_in: "Вход"
+    resend_instructions: "Переотправка инструкций подтверждения"
+    greeting_first: "Добро пожаловать"
+    greeting_second: "Привет"
+    confirm_link: "Вы можете подтвердить электронную почту с помощью ссылки ниже:"
+    confirm: "Подтвердить мой аккаунт"
+    change_email_info: "Мы связываемся с вами, чтобы уведомить вас о том, что ваш адрес электронной почты меняется на"
+    change_password_info: "Мы связываемся с вами, чтобы уведомить вас о том, что ваш пароль меняется на"
+    change_my_password: "Изменить мой пароль"
+    change_your_password: "Изменить ваш пароль"
+    reset_password_instructions: "Кто-то запросил ссылку для изменения вашего пароля. Вы можете сделать это по ссылке ниже."
+    gnore_email: "Если вы этого не запрашивали, проигнорируйте это письмо."
+    create_new_password: "Ваш пароль не изменится, пока вы не перейдете по ссылке выше и не создадите новый."
+    acc_has_been_locked: "Ваша учетная запись заблокирована из-за слишком большого количества неудачных попыток входа."
+    click_unlock: "Нажмите на ссылку ниже, чтобы разблокировать свою учетную запись:"
+    unlock: "Разблокировать мою учетную запись"
+    forgot_password: "Забыли пароль?"
+    char_min: "символов минимально"
+    new_password: "Новый пароь"
+    confirn_new_password: "Подтвердить новый пароль"
+    edit: "Редактировать"
+    wait: "В настоящее время ожидается подтверждение для:"
+    leave: "(оставьте пустым, если не хотите его менять)"
+    precondition_to_confirm: "(нам нужен ваш текущий пароль, чтобы подтвердить ваши изменения)"
+    cancel: "Отменить мою учетную запись"
+    precondition_to_cencel: "Несчастлив?"
+    sure: "Вы уверены?"
+    back: "Назад"
+    receive_confirmation: "Не получил инструкции по подтверждению?"
+    receive_unlock: "Не получил инструкции по разблокировке?"
+    sign_in_with: "Войти в систему с"
+    resend_unlock: "Повторно отправить инструкции по разблокировке"
   devise:
     failure:
       already_authenticated: "Вы уже вошли в систему."
