Add view and controller for users
* Add users controller

* Add user view

* Add tests

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,6 +1,41 @@
 # Additional translations at https://github.com/heartcombo/devise/wiki/I18n
 
 en:
+  edit_acc: "Edit Account"
+  sign_out: "Sign Out"
+  sign_up: "Sign Up"
+  sign_in: "Sign In"
+  resend_instructions: "Resend confirmation instructions"
+  greeting_first: "Welcome"
+  greeting_second: "Hello"
+  confirm_link: "You can confirm your account email through the link below:"
+  confirm: "Confirm my account"
+  change_email_info: "We're contacting you to notify you that your email is being changed to"
+  change_password_info: "We're contacting you to notify you that your password has been changed."
+  change_my_password: "Change my password"
+  change_your_password: "Change your password"
+  reset_password_instructions: "Someone has requested a link to change your password. You can do this through the link below."
+  gnore_email: "If you didn't request this, please ignore this email."
+  create_new_password: "Your password won't change until you access the link above and create a new one."
+  acc_has_been_locked: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+  click_unlock: "Click the link below to unlock your account:"
+  unlock: "Unlock my account"
+  forgot_password: "Forgot your password?"
+  char_min: "characters minimum"
+  new_password: "New password"
+  confirn_new_password: "Confirm new password"
+  edit: "Edit"
+  wait: "Currently waiting confirmation for: "
+  leave: "(leave blank if you don't want to change it)"
+  precondition_to_confirm: "(we need your current password to confirm your changes)"
+  cancel: "Cancel my account"
+  precondition_to_cencel: "Unhappy?"
+  sure: "Are you sure?"
+  back: "Back"
+  receive_confirmation: "Didn't receive confirmation instructions?"
+  receive_unlock: "Didn't receive unlock instructions?"
+  sign_in_with: "Sign in with"
+  resend_unlock: "Resend unlock instructions"
   precondition: "Create or sign in an account"
   greeting: "Hello"
   user:
