--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -31,7 +31,7 @@ ru:
         one: "%{resource}: сохранение не удалось из-за %{count} ошибки"
         other: "%{resource}: сохранение не удалось из-за %{count} ошибки"
   user:
-    edit_acc: "Изменение личных данных"
+    edit_acc: "Настройки"
     sign_out: "Выход"
     sign_up: "Регистрация"
     sign_in: "Вход"
@@ -58,7 +58,7 @@ ru:
     wait: "В настоящее время ожидается подтверждение для:"
     leave: "(оставьте пустым, если не хотите его менять)"
     precondition_to_confirm: "(нам нужен ваш текущий пароль, чтобы подтвердить ваши изменения)"
-    cancel: "Отменить мою учетную запись"
+    cancel: "Удалить мою учетную запись"
     precondition_to_cencel: "Несчастлив?"
     sure: "Вы уверены?"
     back: "Назад"
