--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,3 +2,19 @@ ru:
   event:
     date_past: "Дата не может быть в прошлом"
     date_to_notif: "Упоминание о событиях не может быть позже их даты"
+    name: "Имя"
+    category: "Категория"
+    date: "Дата"
+    date_to_notificate: "Напомнить"
+    events: "События"
+    no_events: "Событий нет"
+    create_new: "Создать новое"
+    edit: "Редактировать"
+    no_events: "Нет событий"
+    create_new: "Создать новое"
+    create: "Создать"
+    remind: "Напомнить"
+    delete: "Удалить"
+    next: "След"
+    prev: "Пред"
+    my: "Моё"
