--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,7 +1,7 @@
 # Additional translations at https://github.com/heartcombo/devise/wiki/I18n
 
 en:
-  edit_acc: "Edit Account"
+  edit_acc: "Settings"
   sign_out: "Sign Out"
   sign_up: "Sign Up"
   sign_in: "Sign In"
