--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,11 @@ en:
     create_new: "Create new"
     category_deleted: "Category has been deleted successfully"
     category_updated: "Category has been updated successfully"
+    category_not_deleted: "Category hasn't been deleted successfully"
+    category_not_updated: "Category hasn't been updated successfully"
+    category_not_created: "Category hasn't been successfully created"
+    name_has_taken: "Name has already been taken"
+    name_not_blank: "Name can't be blank"
   event:
     date_past: "Date cannot be in the past"
     mention_future: "Mention of events cannot be later than their date"
