--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,6 @@
 ru:
   event:
+    events: "События"
     date_past: "Дата не может быть в прошлом"
     date_to_notif: "Упоминание о событиях не может быть позже их даты"
     name: "Имя"
@@ -20,3 +21,10 @@ ru:
     my: "Моё"
     mention_future: "Напоминание события не может быть позже его даты"
     mention_past: "Напоминание события не может быть в прошлом"
+    event_not_deleted: "Событие не удалилось"
+    event_deleted: "Событие успешно удалено"
+    event_created: "Событие успешно создано"
+    event_not_created: "Событие не создано"
+    event_updated: "Событие успешно изменено"
+    event_not_updated: "Событие не изменолось"
+    foreign_category: "Это чужая категория"
