--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,9 @@ en:
     next: "Next"
     prev: "Prev"
     my: "My"
+    name: "Name"
+    select: "Select category"
+    search: "Search"
     event_deleted: "Event has been successfully deleted"
     date_past: "Date cannot be in the past"
     mention_future: "Mention of events cannot be later than their date"
