--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,8 @@ ru:
     next: "След"
     prev: "Пред"
     my: "Моё"
+    select: "Выбор категории"
+    search: "Поиск"
     mention_future: "Напоминание события не может быть позже его даты"
     mention_past: "Напоминание события не может быть в прошлом"
     event_not_deleted: "Событие не удалилось"
