--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,10 @@ en:
     prev: "Prev"
     my: "My"
     name: "Name"
+    category: "Category"
+    date: "Event date"
+    date_to_notificate: "Date to notificate"
+    description: "Description"
     select: "Select category"
     search: "Search"
     event_deleted: "Event has been successfully deleted"
