--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -39,3 +39,4 @@ ru:
     day: "День"
     evening: "Вечер"
     no_weather: "Доступны данные только за последние 2 дня"
+    not_available: "Погода не доступна"
