--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -17,6 +17,31 @@ ru:
     category_not_updated: "Категория не обновлена"
     category_not_created: "Категория не создана"
   event:
+    events: "События"
     date_past: "Дата не может быть в прошлом"
+    date_to_notif: "Упоминание о событиях не может быть позже их даты"
+    name: "Имя"
+    category: "Категория"
+    date: "Дата"
+    date_to_notificate: "Напомнить"
+    events: "События"
+    no_events: "Событий нет"
+    create_new: "Создать новое"
+    edit: "Редактировать"
+    no_events: "Нет событий"
+    create_new: "Создать новое"
+    create: "Создать"
+    remind: "Напомнить"
+    delete: "Удалить"
+    next: "След"
+    prev: "Пред"
+    my: "Моё"
     mention_future: "Напоминание события не может быть позже его даты"
     mention_past: "Напоминание события не может быть в прошлом"
+    event_not_deleted: "Событие не удалилось"
+    event_deleted: "Событие успешно удалено"
+    event_created: "Событие успешно создано"
+    event_not_created: "Событие не создано"
+    event_updated: "Событие успешно изменено"
+    event_not_updated: "Событие не изменолось"
+    foreign_category: "Это чужая категория"
